dev/jcode-front-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jcode-front-dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jcode-front-dev
  template:
    metadata:
      labels:
        app: jcode-front-dev
    spec:
      imagePullSecrets:
        - name: jcode-front-dev-habor-registry-secret
      containers:
        - name: react
          image: harbor.jbnu.ac.kr/jsh2256/jcode-front-dev:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              memory: 10Gi
      tolerations:
        - key: "dev-node"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"

---
apiVersion: v1
kind: Service
metadata:
  name: jcode-front-dev-svc
  namespace: dev
spec:
  selector:
    app: jcode-front-dev
  ports:
    - name: front-metrics
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
